--- a/book/scss/scenes/_common.scss
+++ b/book/scss/scenes/_common.scss
@@ -17,6 +17,10 @@
 	z-index: 0;
 	@include background-size( 100% auto);
 	@include background-origin( padding-box);
+	@include breakpoint($breakpoint-short) {
+		margin: 0 auto;
+    	width: 133.3333vh;
+  	}
 }
 
 .cue {	@extend %imgreplace;}
