--- a/book/scss/screen.scss
+++ b/book/scss/screen.scss
@@ -1,5 +1,6 @@
 @import "compass/css3/"; // css3 helpers
 @import "animation-studio"; // animation helpers
+@import "breakpoint"; // media queries
 
 // Import reset to blow away all styles ever. Don't need them.
 @import "compass/reset";
