--- a/book/scss/scenes/_common.scss
+++ b/book/scss/scenes/_common.scss
@@ -18,7 +18,9 @@
 	@include background-size( 100% auto);
 	@include background-origin( padding-box);
 	@include breakpoint($breakpoint-short) {
+	    height: 100vh;
 		margin: 0 auto;
+	    padding: 0;
     	width: 133.3333vh;
   	}
 }
